:bug: Fix Table column align in windows chrome
close #19952

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -667,15 +667,20 @@
 
   // optimize header style of borderd table after hide extra scrollbar
   &-bordered&-fixed-header &-scroll &-header {
-    &::-webkit-scrollbar {
-      border: 1px solid @border-color-split;
-      border-width: 1px 1px 1px 0;
-    }
     &.@{table-prefix-cls}-hide-scrollbar
       .@{table-prefix-cls}-thead
       > tr:only-child
       > th:last-child {
       border-right-color: transparent;
+    }
+  }
+
+  // https://github.com/ant-design/ant-design/issues/19952#issuecomment-559367149
+  // do not add scrollbar style before calculate scrollbar width, it will affect windows chrome
+  &-bordered&-fixed-header &-scroll &-header&-hide-scrollbar {
+    &::-webkit-scrollbar {
+      border: 1px solid @border-color-split;
+      border-width: 1px 1px 1px 0;
     }
   }
 
